# python-oni-save-parser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TOOLS_ROADMAP.md  VERIFICATION.md  background.md  pyproject.toml  verify.py
docs/: rendering.md
docs/plans/: 2025-10-29-python-parser-design.md  2025-10-29-python-parser-implementation.md  2025-10-30-base-layout-exporter.md  2025-10-30-colony-dashboard.md  2025-10-30-critter-plant-tracker.md  2025-10-30-duplicant-analyzer.md  2025-10-30-power-grid-analyzer.md  2025-10-30-resource-counter.md  2025-10-30-save-differ.md  2025-10-31-geyser-output-improvement-design.md  2025-10-31-geyser-output-improvement.md  2025-10-31-resource-counter-design.md  2025-10-31-resource-counter-implementation.md  2025-10-31-tool-output-improvement-design.md  2025-11-01-map-rendering-design.md  2025-11-01-map-rendering.md  README.md
examples/: README.md  basic_usage.py  colony_scanner.py  duplicant_info.py  geyser_info.py  render_map.py  resource_counter.py
src/oni_save_parser/: __init__.py  __main__.py  api.py  element_loader.py  extractors.py  formatters.py  utils.py
src/oni_save_parser/assets/: __init__.py  element_registry.py  fallback_colors.py
src/oni_save_parser/parser/: __init__.py  errors.py  parse.py  unparse.py
src/oni_save_parser/rendering/: __init__.py  cell_renderer.py  models.py  pipeline.py  static_renderer.py  transformers.py
src/oni_save_parser/save_structure/: __init__.py  header.py  save_game.py
src/oni_save_parser/save_structure/game_objects/: __init__.py  behavior_parser.py  group_parser.py  object_parser.py  parser.py  types.py
src/oni_save_parser/save_structure/type_templates/: __init__.py  template_parser.py  type_data_parser.py  type_info_parser.py  types.py
test_saves/: 01-early-game-cycle-010.sav  02-mid-game-cycle-148.sav  README.md
tests/: conftest.py  test_storage_parsing.py
tests/benchmark/: __init__.py  test_performance.py
tests/integration/: __init__.py  test_full_pipeline.py  test_render_map_cli.py
tests/rendering/: test_cell_renderer.py  test_element_registry.py  test_fallback_colors.py  test_models.py  test_pipeline.py  test_static_renderer.py  test_transformers.py
tests/unit/: test_api.py  test_cli.py  test_colony_scanner.py  test_duplicant_info.py  test_element_loader.py  test_extractors.py  test_formatters.py  test_geyser_info.py  test_resource_counter.py  test_utils.py
tests/unit/parser/: test_errors.py  test_parse.py  test_unparse.py
tests/unit/save_structure/: test_header.py  test_save_game.py
tests/unit/save_structure/game_objects/: test_game_objects.py
tests/unit/save_structure/type_templates/: test_template_parser.py  test_type_data_parser.py  test_type_info_parser.py  test_types.py
