[project]
name = "oni-save-parser"
version = "1.0.0"
description = "Parser for Oxygen Not Included save files"
authors = [{name = "ONI Save Parser Contributors"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
keywords = ["oni", "oxygen-not-included", "save-parser", "game", "parser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["pyyaml>=6.0"]

[project.scripts]
oni-save-parser = "oni_save_parser.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.90.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
# Strict checking for source code only
files = ["src", "examples"]

[[tool.mypy.overrides]]
module = ["src.*", "examples.*"]
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
# Allow untyped test functions for readability
disallow_untyped_defs = false
disallow_untyped_calls = false
check_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
